TestConnection/force-app/main/default/objects/Account/fields/AccountID_18__c.field-meta.xml
<CustomField>
    <fullName>AccountID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountID 18</label>
    <type>Text</type>
</CustomField>