TestConnection/force-app/main/default/objects/Account/fields/Customer_Support_Cases__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Cases__c</fullName>
    <label>Customer Support Cases</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>