TestConnection/force-app/main/default/objects/Account/fields/multi__c.field-meta.xml
<CustomField>
    <fullName>multi__c</fullName>
    <label>multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>