TestConnection/force-app/main/default/objects/Account/fields/Multi_Pick__c.field-meta.xml
<CustomField>
    <fullName>Multi_Pick__c</fullName>
    <label>Multi Pick</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MultiPicklist</valueSetName>
    </valueSet>
</CustomField>