TestConnection/force-app/main/default/objects/Account/fields/Sales_Cases__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cases__c</fullName>
    <label>Sales Cases</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>